files/vap-cis-prevent-default-service-accounts-policy-binding.yml
# Validating Admission Policy
# Name: Ensure that default service accounts are not actively used
#       Kubernetes provides a default service account which is used by cluster workloads where no specific service account is assigned to the pod.
#       Where access to the Kubernetes API from a pod is required, a specific service account should be created for that pod, and rights granted to that service account.
# Docs: https://hub.datree.io/built-in-rules/ensure-default-service-account-not-used
# Severity: Low

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-prevent-default-service-accounts-policy-binding"
spec:
  policyName: "vap-cis-prevent-default-service-accounts-policy"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - kube-node-lease
        - kube-public
        - kube-system
        - calico-apiserver
        - calico-system
        - tigera-operator
        - istio-system
