files/vap-cis-prevent-default-service-accounts-policy.yml
# Validating Admission Policy
# Name: Ensure that default service accounts are not actively used
#	Kubernetes provides a default service account which is used by cluster workloads where no specific service account is assigned to the pod. 
#	Where access to the Kubernetes API from a pod is required, a specific service account should be created for that pod, and rights granted to that service account.
# Docs: https://hub.datree.io/built-in-rules/ensure-default-service-account-not-used
# Severity: Low
# This policy prevents creation of default account on namespece creation

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "vap-cis-prevent-default-service-accounts-policy"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods", "serviceaccounts"]
  validations:
    - expression: >
        object.kind != 'ServiceAccount' ||
        (
          has(object.automountServiceAccountToken) &&
          object.automountServiceAccountToken == false
        )
      message: "Invalid value for key `automountServiceAccountToken` - set to `false` to ensure rights can be more easily audited (see more at  https://hub.datree.io/built-in-rules/ensure-default-service-account-not-used)"
