files/vap-cis-prevent-escalating-privileges-policy-binding.yml
# Validating Admission Policy
# Name: Prevent containers from escalating privileges
#       Privileged escalation allows a process to change the security context under which its running.
#       In their default state, containers allow privilege escalation.
#       Attackers may use this default behavior to manipulate the application or process and to gain more permissions than they should have.
# Author: Abhijit Jadhav
# Docs: https://hub.datree.io/built-in-rules/prevent-escalating-privileges
# Severity: Low

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-prevent-escalating-privileges-policy-binding"
spec:
  policyName: "vap-cis-prevent-escalating-privileges-policy"
  validationActions: [Deny]
  paramRef:
    name: validation-parameters
    parameterNotFoundAction: "Deny"
  matchResources: {}

### The namespace exclusion logic now moved into CRD, Parameter and embeded in Policy. This gives more flexibility on managing and maintaing common exclusions
### You can still exclude additional app namespaces which are specific to the policy exclusion using following matchExpressions
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#     - key: kubernetes.io/metadata.name
#       operator: NotIn
#       values:
#       - app-one-namespace
#       - app-two-namespace
###
### OR using labels
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#       namsSpaceSelector:
#         matchLabels:
#           environment: prod
