files/vap-cis-prevent-system-master-group-policy-binding.yml
# Validating Admission Policy
# Name: Prevent use of the system:masters group
#	The system:masters group has unrestricted access to the Kubernetes API hard-coded into the API server source code. 
#	An authenticated user who is a member of this group cannot have their access reduced, even if all bindings and cluster role bindings which mention it, are removed.
#       When combined with client certificate authentication, use of this group can allow for irrevocable cluster-admin level credentials to exist for a cluster.
# Author: Abhijit Jadhav
# Docs: https://hub.datree.io/built-in-rules/prevent-system-masters-group 
# Severity: Medium

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-prevent-system-master-group-policy-binding"
spec:
  policyName: "vap-cis-prevent-system-master-group-policy"
  validationActions: [Deny]
  matchResources: {}
