files/vap-cis-restrict-seccomp-profiles-policy-binding.yml
# Validating Admission Policy
# Name: Ensure that the seccomp profile is set to docker/default in your pod definitions
#       Seccomp (secure computing mode) is used to restrict the set of system calls applications can make,
#       allowing cluster administrators greater control over the security of workloads running in the cluster.
#       Kubernetes disables seccomp profiles by default for historical reasons.
#       You should enable it to ensure that the workloads have restricted actions available within the container.
# Author: Abhijit Jadhav
# Docs: https://hub.armosec.io/docs/c-0210
# Severity: Medium

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-restrict-seccomp-profiles-policy-binding"
spec:
  policyName: "vap-cis-restrict-seccomp-profiles-policy"
  validationActions: [Deny]
  paramRef:
    name: validation-parameters
    parameterNotFoundAction: "Deny"
  matchResources: {}

### The namespace exclusion logic now moved into CRD, Parameter and embeded in Policy. This gives more flexibility on managing and maintaing common exclusions
### You can still exclude additional app namespaces which are specific to the policy exclusion using following matchExpressions
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#     - key: kubernetes.io/metadata.name
#       operator: NotIn
#       values:
#       - app-one-namespace
#       - app-two-namespace
###
### OR using labels
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#       namsSpaceSelector:
#         matchLabels:
#           environment: prod
